crates/apollo-compiler/test_data/diagnostics/0082_introspection_types_in_mutation.txt
Error: type `MyMutationRootType` does not have a field `__type`
    ╭─[ 0082_introspection_types_in_mutation.graphql:15:3 ]
    │
 10 │ type MyMutationRootType {
    │      ─────────┬────────  
    │               ╰────────── type `MyMutationRootType` defined here
    │ 
 15 │   __type(name: "User") {
    │   ───┬──  
    │      ╰──── field `__type` selected here
    │ 
    │ Note: path to the field: `mutation introspect → __type`
────╯

